kubernetes/gke-http-lb/ingress/1-frontend-backend-config.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-ingress-gateway
