kubernetes/gke-http-lb/ingress/5-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
    cert-manager.io/issue-temporary-certificate: "true"
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: global-external-ip
    networking.gke.io/v1beta1.FrontendConfig: ingress-frontend
  name: ingress-hello-doggo
  namespace: istio-ingress-gateway
spec:
  ingressClassName: gce
  rules:
  - host: hello-doggo.com
    http:
      paths:
      - backend:
          service:
            name: istio-ingress-gw
            port:
              number: 443
        path: /*
        pathType: ImplementationSpecific
  - host: "*.hello-doggo.com"
    http:
      paths:
      - backend:
          service:
            name: istio-ingress-gw
            port:
              number: 443
        path: /*
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - hello-doggo.com
    - "*.hello-doggo.com"
    secretName: hello-doggo-com-cert
